  * ubuntutools.subprocess:
    - New drop-in replacement wrapper module around subprocess that
      backports the restore_signals kwarg and defaults close_fds=True
    - Switch everything previously using subprocess to use
      ubuntutools.subprocess instead (LP: #785854)

  [ Stefano Rivera ]
  * submittodebian: Write a usable .reportbugrc if it doesn't exist.
    (LP: #800429)

 -- Evan Broder <evan@ebroder.net>  Sat, 11 Jun 2011 05:11:23 -0700

ubuntu-dev-tools (0.125ubuntu1) oneiric; urgency=low

  [ Benjamin Drung ]
  * backportpackage: Use --force-bad-version instead of --allow-lower-version
    (which requires a parameter) for debchange.
  * Adjust EOL date of Ubuntu 9.10 "Karmic Koala".

  [ Stefano Rivera ]
  * ubuntutools.archive: Display any errors rmadison emits, rather than
    guessing at the cause. (LP: #788447)
  * sponsor-patch: Use dch --release instead of --edit to work with
    DEBCHANGE_RELEASE_HEURISTIC=changelog.

  [ Dustin Kirkland ]
  * doc/lp-project-upload.1, lp-project-upload:
    - add support for optionally specifying files containing the changelog
      and release notes for the release
    - allows scripts to avoid the interactive editors
    - document these changes in the manpage

  [ Didier Roche ]
  * lp-project-upload:
    - fix a bug when new milestone wasn't specified (LP: #797170)
  * get-build-deps:
    - fix a wrong parser when some build-dep have an epoch

  [ Brian Murray ]
  * grab-attachments, doc/grab-attachments.1:
    - add in download attachments from duplicates
    - add in download attachments from all bugs about a package
    - document new options in the manpage

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 24 Jun 2011 11:50:17 +0200

ubuntu-dev-tools (0.124) unstable; urgency=low

  [ Benjamin Drung ]
  * Move add-patch, edit-patch, suspicious-source, what-patch, and wrap-and-sort
    from ubuntu-dev-tools into devscripts (Closes: #568481).

  [ Daniel Holbach ]
  * bitesize: