@@ -12,3 +12,4 @@ version,codename,series,created,release,eol
 6.0,Squeeze,squeeze,2009-02-14,2011-02-06
 7.0,Wheezy,wheezy,2011-02-06
 ,Sid,sid,1993-08-16
+,Experimental,experimental,1993-08-16
